--- a/package.json
+++ b/package.json
@@ -1,43 +1,57 @@
 {
-  "name": "racecast-emitter",
-  "version": "1.1.0",
-  "description": "Onboard autonomous IoT project to capture and transmit data and media stream from the race car.",
-  "author": {
-    "name": "Mathis Serrieres Maniecki",
-    "email": "contact@minarox.fr",
-    "url": "https://minarox.fr/"
-  },
-  "bugs": {
-    "url": "https://github.com/Minarox/RaceCast-Emitter/issues",
-    "email": "contact@minarox.fr"
-  },
-  "homepage": "https://github.com/Minarox/RaceCast-Emitter#readme",
-  "readme": "./README.md",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Minarox/RaceCast-Emitter.git"
-  },
-  "scripts": {
-    "dev": "node --env-file=.env src/main.ts",
-    "check": "tsc",
-    "start": "nodemon --delay 5 -- --env-file=.env src/main.ts"
-  },
-  "devDependencies": {
-    "@types/bun": "^1.2.4",
-    "@types/i2c-bus": "^5.1.2",
-    "nodemon": "^3.1.9"
-  },
-  "dependencies": {
-    "colors": "^1.4.0",
-    "i2c-bus": "^5.2.3",
-    "i2c-mpu6050": "^2.3.0",
-    "livekit-server-sdk": "^2.10.2",
-    "puppeteer-core": "^24.3.1",
-    "typescript": "^5.8.2",
-    "winston": "^3.17.0"
-  },
-  "engines": {
-    "node": ">=23.6.0"
-  },
-  "engineStrict": true
+    "name": "racecast-emitter",
+    "version": "1.1.0",
+    "description": "Onboard autonomous IoT project to capture and transmit data and media stream from the race car.",
+    "license": "Apache-2.0",
+    "author": {
+        "name": "Mathis Serrieres Maniecki",
+        "email": "contact@minarox.fr",
+        "url": "https://minarox.fr/"
+    },
+    "bugs": {
+        "url": "https://github.com/Minarox/RaceCast-Emitter/issues",
+        "email": "contact@minarox.fr"
+    },
+    "homepage": "https://github.com/Minarox/RaceCast-Emitter#readme",
+    "readme": "./README.md",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Minarox/RaceCast-Emitter.git"
+    },
+    "type": "module",
+    "scripts": {
+        "dev": "node --env-file=.env src/main.ts",
+        "check": "tsc",
+        "start": "nodemon --delay 5 -- --env-file=.env src/main.ts"
+    },
+    "devDependencies": {
+        "@types/bun": "^1.2.4",
+        "@types/i2c-bus": "^5.1.2",
+        "nodemon": "^3.1.9"
+    },
+    "dependencies": {
+        "colors": "^1.4.0",
+        "i2c-bus": "^5.2.3",
+        "i2c-mpu6050": "^2.3.0",
+        "livekit-server-sdk": "^2.10.2",
+        "puppeteer-core": "^24.3.1",
+        "typescript": "^5.8.2",
+        "winston": "^3.17.0"
+    },
+    "engines": {
+        "node": ">=23.6.0"
+    },
+    "engineStrict": true,
+    "pnpm": {
+        "packageExtensions": {
+            "i2c-bus": {
+                "optionalDependencies": {
+                    "node-gyp": "*"
+                }
+            }
+        },
+        "onlyBuiltDependencies": [
+            "i2c-bus"
+        ]
+    }
 }
