--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,17 @@
 version: 2
 updates:
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-      time: "09:00"
-      timezone: "Europe/Paris"
-    labels:
-      - "dependencies"
+    - package-ecosystem: "github-actions"
+      directory: "/"
+      schedule:
+        interval: "monthly"
+        timezone: "Europe/Paris"
+      labels:
+      - "dependencie"
+
+    - package-ecosystem: "npm"
+      directory: "/"
+      schedule:
+        interval: "monthly"
+        timezone: "Europe/Paris"
+      labels:
+      - "dependencie"
