refactor: Update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-LIVEKIT_URL="https://example.com"
+LIVEKIT_DOMAIN="example.com"
 LIVEKIT_API_KEY="API_KEY"
 LIVEKIT_API_SECRET="API_SECRET"
 LIVEKIT_ROOM="racecast"
