--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ LIVEKIT_DOMAIN="example.com"
 LIVEKIT_API_KEY="API_KEY"
 LIVEKIT_API_SECRET="API_SECRET"
 LIVEKIT_ROOM="racecast"
-LIVEKIT_IDENTITY="car"
+LIVEKIT_IDENTITY="emitter"
